# liminal

./: .gitignore  CLAUDE.md  PLAN.md  PLUGIN_GUIDELINES.md  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: build-plugin.yml  build-wheels.yml
audio/: render.py
chordspace/: PLAN.md  index.html  package-lock.json  package.json  tsconfig.json
chordspace/docs/: harmonic_navigation.md  math_foundations.md  synthesis_engine.md
chordspace/src/: annular.ts  app.ts  chordmap.ts  constellation.ts  core.ts  dissonance.ts  navigation.ts  synth.ts  tonnetz.ts
engine/: fdn.py  numba_fdn.py  numba_fdn_mod.py  params.py
explore/: TODO_generate.txt  audio_effects_catalog.md  generate.py  generate_inputs.py  manifest.py  primitives.py  registry.py  requirements.txt  run_all.py  test_effects.py
explore/effects/: a_delay.py  b_reverb.py  c_modulation.py  d_distortion.py  e_filter.py  f_dynamics.py  g_pitch_time.py  h_spectral.py  i_granular.py  j_chaos_math.py  k_neural.py  l_convolution.py  m_physical.py  (+5 more)
fractal/: PLAN.md  RESEARCH_FRACTAL.md  RESEARCH_PROMPT.md  main.py
gui/: gui.py
icons/: generate_icons.py
lossy/: RESEARCH.md  main.py
primitives/: delay_line.py  filters.py  matrix.py
reverb/: main.py
rust/: Cargo.toml  Makefile  PLUGIN_GUIDELINES.md
rust/crates/explore-cli/: Cargo.toml
rust/crates/explore-cli/src/: main.rs
rust/crates/explore-dsp/: Cargo.toml
rust/crates/explore-dsp/src/: lib.rs  primitives.rs  stft.rs
rust/crates/explore-dsp/src/effects/: a_delay.rs  b_reverb.rs  c_modulation.rs  d_distortion.rs  e_filter.rs  f_dynamics.rs  g_pitch_time.rs  h_spectral.rs  i_granular.rs  j_chaos_math.rs  k_neural.rs  l_convolution.rs  m_physical.rs  mod.rs  n_lofi.rs  o_spatial.rs  p_envelope.rs  q_combo.rs  r_misc.rs
rust/crates/fractal-dsp/: Cargo.toml
rust/crates/fractal-dsp/benches/: fractal_bench.rs
rust/crates/fractal-dsp/src/: chain.rs  core.rs  filters.rs  lib.rs  params.rs
rust/crates/fractal-dsp/tests/: realtime.rs  tolerance.rs
rust/crates/fractal-plugin/: Cargo.toml  build.rs
rust/crates/fractal-plugin/src/: gui.rs  lib.rs  main.rs  params.rs  presets.rs
rust/crates/fractal-python/: Cargo.toml  pyproject.toml
rust/crates/fractal-python/src/: lib.rs
rust/crates/lossy-dsp/: Cargo.toml
rust/crates/lossy-dsp/benches/: lossy_bench.rs
rust/crates/lossy-dsp/src/: bitcrush.rs  chain.rs  filters.rs  lib.rs  packets.rs  params.rs  processor.rs  rng.rs  spectral.rs
rust/crates/lossy-dsp/tests/: realtime.rs  tolerance.rs
rust/crates/lossy-plugin/: Cargo.toml  build.rs
rust/crates/lossy-plugin/src/: gui.rs  lib.rs  main.rs  params.rs  presets.rs
rust/crates/lossy-python/: Cargo.toml  pyproject.toml
rust/crates/lossy-python/src/: lib.rs
rust/crates/reverb-dsp/: Cargo.toml
rust/crates/reverb-dsp/benches/: reverb_bench.rs
rust/crates/reverb-dsp/src/: chain.rs  fdn.rs  fdn_mod.rs  lib.rs  matrix.rs  params.rs  processor.rs
rust/crates/reverb-dsp/tests/: realtime.rs  tolerance.rs
rust/crates/reverb-plugin/: Cargo.toml  build.rs
rust/crates/reverb-plugin/src/: gui.rs  lib.rs  main.rs  params.rs  presets.rs
rust/crates/reverb-python/: Cargo.toml  pyproject.toml
rust/crates/reverb-python/src/: lib.rs
rust/crates/shared-dsp/: Cargo.toml
rust/crates/shared-dsp/src/: lib.rs  metrics.rs  osc.rs  ring_buffer.rs  smoothing.rs
rust/patches/baseview/src/macos/: view.rs
rust/patches/nih-plug/src/wrapper/standalone/backend/: cpal.rs
rust/py/: lossy_gui.py  run_lossy.py
rust/xtask/: Cargo.toml
rust/xtask/src/: main.rs
shared/: analysis.py  audio.py  audio_features.py  llm_guide_text.py  llm_tuner.py  macos.py  params.py  streaming.py  waveform.py
spectral_canvas/: RESEARCH.md  SPECTRAL_PAINTER_BUILD_PROMPT.md  __main__.py  canvas.py  controls.py  main.py  model.py  player.py  transport.py
tests/: save_dry_signals.py  test_allpass.py  test_biquad.py  test_delay_line.py  test_edge_cases.py  test_fdn.py  test_fractional_delay.py  test_matrix.py  test_one_pole.py  test_primitives.py  test_topologies.py
(+325 files in other folders)
