[project]
name = "reverb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27,<1.0",
    "matplotlib>=3.7",
    "numpy>=1.24,<2.4",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reverb", "lossy", "fractal", "shared"]

[project.scripts]
reverb = "reverb.main:main"
lossy = "lossy.main:main"
fractal = "fractal.main:main"
