[workspace]
resolver = "2"
members = [
    "crates/lossy-dsp",
    "crates/lossy-python",
    "crates/shared-dsp",
    "crates/lossy-plugin",
    "xtask",
]

[workspace.dependencies]
realfft = "3.5"
num-complex = "0.4"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
rosc = "0.11"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[patch."https://github.com/robbert-vdh/nih-plug.git"]
nih_plug = { path = "patches/nih-plug" }
nih_plug_egui = { path = "patches/nih-plug/nih_plug_egui" }
