[package]
name = "fractal-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "fractal-standalone"
path = "src/main.rs"

[dependencies]
fractal-dsp = { path = "../fractal-dsp" }
shared-dsp = { path = "../shared-dsp" }
nih_plug.workspace = true
nih_plug_egui.workspace = true
serde_json.workspace = true
