[package]
name = "lossy-dsp"
version = "0.1.0"
edition = "2021"

[dependencies]
realfft.workspace = true
num-complex.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
hound.workspace = true
rand_mt = "5.0.0"

[[bin]]
name = "lossy-cli"
path = "src/bin/cli.rs"
