[package]
name = "lossy-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "lossy-standalone"
path = "src/main.rs"

[dependencies]
lossy-dsp = { path = "../lossy-dsp" }
shared-dsp = { path = "../shared-dsp" }
nih_plug.workspace = true
nih_plug_egui.workspace = true
serde_json.workspace = true
